Value check for metrics processing result before use

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "sourceMap": true,
         "declaration": true,
         "removeComments": true,
+        "strict": true,
         "outDir": "./dist/lib",
         "declarationDir": "./dist/@types",
         "baseUrl": "./",
