--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "dist/lib/index.js",
   "types": "dist/@types/index.d.ts",
   "files": [
-    "/dist"
+    "dist/**/*",
+    "@types/**/*"
   ],
   "author": "diorbert.pereira",
   "repository": "github:Peritoz/quantitative-analysis",
+  "engines": {
+    "node": ">= 12"
+  },
   "scripts": {
-    "test": "npx jest",
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist/lib --copy-files --no-copy-ignored",
-    "postbuild": "tsc -p tsconfig.build.json --emitDeclarationOnly"
+    "test": "jest",
+    "build": "tsc --project tsconfig.build.json && tscpaths -p tsconfig.build.json -s ./src -o ./dist/lib && tscpaths -p tsconfig.build.json -s ./src -o ./dist/@types"
   },
   "_moduleAliases": {
     "@libs": "src/libs"
@@ -35,6 +38,7 @@
     "ts-jest": "^27.1.2",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
+    "tscpaths": "^0.0.9",
     "typescript": "^4.5.4"
   },
   "keywords": [
