--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^17.0.5",
     "babel-plugin-module-resolver": "^5.0.0",
     "jest": "^29.7.0",
+    "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
     "tscpaths": "^0.0.9",
     "typescript": "^4.5.4"
